--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <body>
     <header>
         <h1>Learning with lee</h1>
-        <img src="iguana.jpg" alt="coding text book, laptop, and notebook">
+        <img src="images/iguana.jpg" alt="coding text book, laptop, and notebook">
     </header>
     <h1>Lesson List</h1>
+
+
+    <!--Lesson List-->
 
     <ul>
 
@@ -25,70 +28,70 @@
 <h2 id ="lesson1"> 
     <a href="./lessons/lesson1.html" target="_blank">Lesson 1</a>
 </h2>
-<div>
-    <video src="rlesson1.mp4" width="600" controls> 
+<div>  
+    <video src="./video/rlesson1.mp4" width="600" controls>
 </div>
 <h2 id="lesson2">
     <a href="./lessons/lesson2.html" target="_blank">Lesson 2</a>
 </h2>
 <div>
-    <video src="rlesson2.mp4" width="600" controls>
+    <video src="./video/rlesson2.mp4" width="600" controls>
 </div>
 
 <h2 id="lesson3">
     <a href="./lessons/lesson3.html" target="_blank">Lesson 3</a>
 </h2>
 <div>
-    <video src="rlesson3.mp4" width="600" controls>
+    <video src="./video/rlesson3.mp4" width="600" controls>
 </div>
 
 <h2 id="lesson4">
     <a href="./lessons/lesson4.html" target="_blank">Lesson 4</a>
 </h2>
 <div>
-    <video src="rlesson4.mp4" width="600" controls>
+    <video src="./video/rlesson4.mp4" width="600" controls>
 </div>
 
 <h2 id="lesson5">
     <a href="./lessons/lesson5.html" target="_blank">Lesson 5</a>
 </h2>
 <div>
-    <video src="rlesson5.mp4" width="600" controls>
+    <video src="./video/rlesson5.mp4" width="600" controls>
 </div>
 
 <h2 id="lesson6">
     <a href="./lessons/lesson6.html" target="_blank">Lesson 6</a>
 </h2>
 <div>
-    <video src="rlesson6.mp4" width="600" controls>
+    <video src="./video/rlesson6.mp4" width="600" controls>
 </div>
 
 <h2 id="lesson7">
     <a href="./lessons/lesson7.html" target="_blank">Lesson 7</a>
 </h2>
 <div>
-    <video src="rlesson7.mp4" width="600" controls>
+    <video src="./video/rlesson7.mp4" width="600" controls>
 </div>
 
 <h2 id="lesson8">
     <a href="./lessons/lesson8.html" target="_blank">Lesson 8</a>
 </h2>
 <div>
-    <video src="rlesson8.mp4" width="600" controls>
+    <video src="./video/rlesson8.mp4" width="600" controls>
 </div>
 
 <h2 id="lesson9">
     <a href="./lessons/lesson9.html" target="_blank">Lesson 9</a>
 </h2>
 <div>
-    <video src="rlesson9.mp4" width="600" controls>
+    <video src="./video/rlesson9.mp4" width="600" controls>
 </div>
 
 <h2 id="lesson10">
     <a href="./lessons/lesson10.html" target="_blank">Lesson 10</a>
 </h2>
 <div>
-    <video src="rlesson10.mp4" width="600" controls>
+    <video src="./video/rlesson10.mp4" width="600" controls>
 </div>
 </body>
 
